<resources>
    <string name="app_name">UniTalk</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_chats">Chats</string>
    <string name="bottom_menu_sell">Sell</string>
    <string name="bottom_menu_myAds">My Ads</string>
    <string name="bottom_menu_account">Account</string>
    <string name="sell_Fab_description">Sell btn</string>
    <string name="Scroll_view_LogIn">LogIN Scroll</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_guest">Continue with Guest</string>
    <string name="not_have_account">Not have Account? <b>Register</b></string>
    <string name="already_have_account">Already have Account <b>LogIn</b></string>
    <string name="register_btn">Register</string>
    <string name="default_web_client_id">815260149117-u55fqt3v3o4llrua74jjf0vqd3sa6e11.apps.googleusercontent.com</string>
    <string name="did_t_receive_otp_resend">Did\'t Receive OTP? <b>Resend</b></string>
    <string name="back_btn">back_Btn</string>
    <string name="forget_password">Forgot Password?<b>Recover</b></string>
    <string name="submit_btn">Forgot submit btn</string>
    <string name="image_btn">Image button</string>
    <string name="price_symbol">Rs</string>
    <string name="ad_favourite_btn">Ad favourite Button</string>
    <string name="myName">ScriptSquad<b>(OPSC7312)</b></string>
    <string name="mission_thisApp_text">The purpose of this App is to provide students an easy access to Student Materials, Past Papers, Notes, and IT Video Lectures.It also provides students with a platform to sell and purchase items.A chat platform also helps them discuss their thoughts. Notice Board for Instant notices.</string>
    <string name="about_thisApp_text">This App is developed by <b>Script Squad</b>.As final Year Project for our OPSC7312 module</string>
    <string name="linkedin">Links</string>
    <string name="resume">OPSC</string>
    <string name="git_hub">Git Hub</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="update_ad">Update Ad</string>
    <string name="create_ad">Create Ad</string>
    <string name="post_ad">Post Ad</string>
    <string name="please_type_the_verification_code_sent_to">Please type the verification code sent to %1$s</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="my_ads">My Ads</string>
    <string name="account">Account</string>
    <string name="categoryAct">categoryAct</string>
    <string name="deleteBtn">Delete</string>
    <string name="favBtn">Favourite Btn</string>
    <string name="add_paper_btn">Add Paper Btn</string>
    <string name="close_btn">Close Btn</string>
    <string name="logout_btn">Logout Btn</string>
    <string name="add_Fab_Btn">Add Fab</string>
    <string name="viewPager">View Pager</string>
    <string name="tab_Layout">Tab Layout</string>
    <string name="download_Btn">Download Btn</string>
    <string name="pdf_upload_Btn">Pdf Upload Btn</string>
    <string name="addCommentBtn">Add Comment Btn</string>
    <string name="more_Btn">More Btn</string>
    <string name="contact">Thank you for considering UniTalk.</string>
    <string name="my_google_map_api_key">AIzaSyA1Dc-f4vIPvewKUkRMHXWj30kBNO3ATIw</string>
    <string name="gimni_api_key">AIzaSyBmupJEwQoFtb9xtQOJXhM064h5n7x2-S0</string>
    <string name="about_us">About Us</string>
    <string name="github_repo">Github Repo</string>
    <string name="about_me">About Me</string>
    <string name="opsc7312">OPSC7312</string>
    <string name="our_mission">Our Mission</string>
    <string name="about_this_app">About This App</string>
    <string name="contact_us">Contact US:</string>
    <string name="_27_123_456_7890">+27 123 456 7890</string>
    <string name="scriptsquad_gmail_com">scriptsquad@gmail.com</string>
    <string name="linkedin_about_detail">Linkedin</string>
    <string name="github">Github</string>
    <string name="android_kotlin">Android/Kotlin</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="_27_84_687_090">+27 84 687 090</string>
    <string name="dob">DOB</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="member_since">Member since</string>
    <string name="account_status">Account Status</string>
    <string name="preferences">Preferences</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="verify_account">Verify Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="language_options" translatable="false">Language Options</string>
    <string-array name="language_options">
        <item>en</item>
        <item>af</item>
        <item>zu</item>
    </string-array>
    <string name="dark_mode">Dark Mode</string>
    <string name="pick_up_to_10_images">Pick up to 10 images</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="ad_details">Ad Details</string>
    <string name="_00">00</string>
    <string name="new_cond">New</string>
    <string name="address">Address</string>
    <string name="seller_detail">Seller Detail</string>
    <string name="call">CALL</string>
    <string name="sms">Sms</string>
    <string name="map">Map</string>
    <string name="seller_profile">Seller Profile</string>
    <string name="published_ads">Published Ads:</string>
    <string name="add_a_new_category">Add a new Category</string>
    <string name="category_title">Category Title</string>
    <string name="submit">Submit</string>
</resources>