<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/languagesCv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray01"
    android:paddingBottom="10dp"
    tools:context=".Account.Account_Activity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/toolbarRl"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/bgdashboard"
            android:fadingEdge="horizontal|vertical">


            <ImageButton
                android:id="@+id/toolbarBackbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_btn"
                android:padding="10dp"
                android:src="@drawable/ic_back_white" />

            <RelativeLayout

                android:id="@+id/profileIv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp">

                <com.google.android.material.imageview.ShapeableImageView

                    android:id="@+id/profileIvAccount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorOnPrimary"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_person_black"
                    app:shapeAppearanceOverlay="@style/ImageStyle_circle"
                    app:strokeColor="#E69BB8" />

            </RelativeLayout>

            <TextView
                android:id="@+id/nameTv"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileIv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="Full Name"
                android:textColor="#fff"
                android:textSize="20sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarRl"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp">


            <TextView
                android:id="@+id/emailLabelTv"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailTv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:text="@string/example_gmail_com" />

            <TextView
                android:id="@+id/phoneLabelTv"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailLabelTv"
                android:layout_marginTop="10dp"
                android:text="@string/phone"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/phoneTv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailLabelTv"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:text="@string/_27_84_687_090" />

            <TextView
                android:id="@+id/dobLabelTv"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneLabelTv"
                android:layout_marginTop="10dp"
                android:text="@string/dob"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dobTv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneLabelTv"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:text="@string/dd_mm_yyyy" />

            <TextView
                android:id="@+id/memberSinceLabelTv"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dobLabelTv"
                android:layout_marginTop="10dp"
                android:text="@string/member_since"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/memberSinceTv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dobLabelTv"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:text="@string/dd_mm_yyyy" />


            <TextView
                android:id="@+id/verificationLabelTv"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/memberSinceLabelTv"
                android:layout_marginTop="10dp"
                android:text="@string/account_status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/verificationTv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/memberSinceLabelTv"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:text="@string/not_verified" />

            <LinearLayout
                android:layout_width="374dp"
                android:layout_height="375dp"
                android:layout_below="@id/verificationLabelTv"
                android:layout_marginTop="3dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/preferences"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/logoutCv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:minHeight="48dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_logout_gray"
                        android:drawableEnd="@drawable/ic_next_gray"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/logout"
                        android:textColor="#7D5260"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/editProfileCv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:minHeight="48dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person_gray"
                        android:drawableEnd="@drawable/ic_next_gray"
                        android:drawablePadding="10dp"
                        android:text="@string/edit_profile"
                        android:textColor="#7D5260"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/changePasswordCv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:minHeight="48dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_gray"
                        android:drawableEnd="@drawable/ic_next_gray"
                        android:drawablePadding="10dp"
                        android:text="@string/change_password"
                        android:textColor="#7D5260"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/verifyAccountCv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:minHeight="48dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_verify_gray"
                        android:drawableEnd="@drawable/ic_next_gray"
                        android:drawablePadding="10dp"
                        android:text="@string/verify_account"
                        android:textColor="#7D5260"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/deleteAccountCv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:minHeight="48dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_block_gray"
                        android:drawableEnd="@drawable/ic_next_gray"
                        android:drawablePadding="10dp"
                        android:text="@string/delete_account"
                        android:textColor="#7D5260"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:minHeight="48dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="10dp">

                    <TextView
                        android:id="@+id/languagesCV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_alphabetical"
                        android:drawableEnd="@drawable/ic_next_gray"
                        android:drawablePadding="10dp"
                        android:text="@string/language_options"
                        android:textColor="#7D5260"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>

                <Switch
                    android:id="@+id/darkModeSwitch"
                    android:layout_width="147dp"
                    android:layout_height="43dp"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:text="@string/dark_mode"
                    android:textColor="@color/light_mode_text" />


            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>

</ScrollView>


    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/m_toolbar_height"-->
    <!--android:id="@+id/toolbarRl"-->
    <!--android:layout_marginBottom="10dp">-->

    <!--<ImageButton-->
    <!--    android:layout_width="wrap_content"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:id="@+id/toolbarBackbtn"-->
    <!--    android:src="@drawable/ic_back"-->
    <!--    android:background="@android:color/transparent"-->
    <!--    android:padding="10dp"-->
    <!--    android:contentDescription="@string/back_btn"-->
    <!--    android:layout_centerVertical="true"-->
    <!--    />-->

    <!--<TextView-->
    <!--    style="@style/TextAppearance.MaterialComponents.Body1"-->
    <!--    android:layout_width="wrap_content"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:layout_centerInParent="true"-->
    <!--    android:text="Account" />-->

    <!--<View-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="1dp"-->
    <!--    android:background="@color/colorGray02"-->
    <!--    android:layout_alignParentBottom="true"/>-->


    <!--</RelativeLayout>-->