<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".Notes.activities.BooksAdminDashboardActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/shape_toolbar02">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:text="Dashboard Admin"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/ic_back_white" />

        <ImageButton
            android:id="@+id/logOutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/logout_btn"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_logout_white" />


    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarRl"
        android:id="@+id/searchCv"
        app:cardCornerRadius="5dp"
        android:background="@android:color/transparent"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchEt"
            android:hint="Search"
            android:background="@color/white"
            android:padding="10dp"
            android:textColorHint="#959595"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_search_gray"
            android:drawablePadding="10dp"/>

    </com.google.android.material.card.MaterialCardView>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLl"
        android:layout_below="@+id/searchCv"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_category_books_admin"/>

    <LinearLayout
        android:id="@+id/bottomLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addCategoryBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_button01"
            android:minHeight="50dp"
            android:text="+ Add Category"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPdfFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_Fab_Btn"
            android:src="@drawable/ic_pdf_add_white"
            app:backgroundTint="@color/light_mode_light_accent"
            app:fabCustomSize="50dp"
            app:tint="@color/white" />


    </LinearLayout>

</RelativeLayout>